--- a/code/public/cs.html
+++ b/code/public/cs.html
@@ -91,8 +91,7 @@
         <h2 class="text-xl font-semibold text-base-content text-center px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Explore my journey as I dive into the world of data!</h2>
 
         <!--Content-->
-        <div class="divider divider-accent text-accent-content py-4 w-full max-w-6xl mx-auto">Path</div>
-        <div>
+        <div class="pt-8 w-full max-w-6xl">
           <ul class="timeline timeline-vertical lg:timeline-horizontal overflow-x-auto">
             <!-- Business Management Degree -->
             <li>
@@ -160,13 +159,26 @@
           </ul>
         </div>
 
-        <div class="divider divider-accent py-4 w-full max-w-6xl mx-auto">Tech stack</div>
-        <h4 class="text-lg text-base-content text-center px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Tech stack:</h4>
+        <div class="divider divider-primary py-4 w-full max-w-6xl mx-auto">Tech stack</div>
+        <div class="container w-full max-w-6xl justify-center flex flex-wrap gap-2">
+          <div class="badge badge-lg badge-outline badge-success">Python</div>
+          <div class="badge badge-lg badge-outline badge-success">HTML/CSS</div>
+          <div class="badge badge-lg badge-outline badge-success">SQL</div>
+          <div class="badge badge-lg badge-outline badge-success">Tensorflow/Keras</div>
+          <div class="badge badge-lg badge-outline badge-success">Pyspark</div>
+        </div>
 
-        <div class="divider divider-accent py-4 w-full max-w-6xl mx-auto">Projects</div>
-        <h4 class="text-lg text-base-content text-center px-4 w-full sm:w-1/2 md:w-1/2 lg:w-1/2">Projects:</h4>
+        <div class="divider divider-primary py-4 w-full max-w-6xl mx-auto">Experience</div>
+        <div class="container w-full max-w-6xl justify-center flex flex-wrap gap-2">
+          <div class="badge badge-lg badge-outline badge-warning">Machine learning</div>
+          <div class="badge badge-lg badge-outline badge-warning">Deep learning/CSS</div>
+          <div class="badge badge-lg badge-outline badge-warning">Big data</div>
+          <div class="badge badge-lg badge-outline badge-warning">Object detection</div>
+          <div class="badge badge-lg badge-outline badge-warning">Software development</div>
+          <div class="badge badge-lg badge-outline badge-warning">Product development</div>
+        </div>
 
-
+        <h1 class="text-3xl text-primary font-extrabold font-mono mt-6 pt-4 text-center">Projects</h1>
 
         <!--Project filter-->
         <div role="tablist" class="tabs tabs-bordered tabs-lg mt-4 pt-4 flex flex-wrap overflow-x-auto">
@@ -176,142 +188,155 @@
           <!--<a role="tab" class="tab flex-1 sm:flex-none" data-type="fun">Just for Fun</a>-->
         </div>
 
-        <section class="project my-16 w-full max-w-6xl mx-auto py-4 px-4 border border-base-content rounded-lg">
-          <!--Personal projects-->
-          <div class="container mx-auto px-4 pb-4 mb-4" data-type="freelance">
-            <h2 class="text-3xl font-extrabold text-info mb-4">Corto Safaris website</h2>
-            <p class="text-lg text-secondary-content mb-4">
-              A website for a tourism company based in Tanzania. A component-based CSS framework was used (Bootstrap) alongside JavaScript and HTML for content & styling, and Jquery for form submission
-            </p>
-            <p class="text-md font-semibold text-gray-400"><strong>Tech Stack:</strong></p>
-            <div class="badge badge-outline badge-info">HTML/CSS</div>
-            <div class="badge badge-outline badge-info">Bootstrap</div>
-            <div class="badge badge-outline badge-info mb-6">JavaScript</div>
-            <p class="text-md font-semibold text-gray-200 mb-4"><strong>Project tag:</strong> Web development</p>
-            <div class="space-x-4 mb-6">
-              <a href="https://www.cortosafaristanzania.com/" target="_blank" class="btn-main">
-                Link to website
-              </a>
-            </div>
-            <div class="flex flex-wrap justify-center gap-4">
-              <img src="img/corto_screen1.png" alt="Screenshot of contact form code" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
-              <img src="img/corto_screen2.png" alt="Screenshot of home page" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
+        <!--Project cards-->
+        <section class="project my-10 w-full max-w-5xl mx-auto py-4 px-4 flex flex-wrap gap-4 justify-center">
+          <!--Personal-->
+          <div class="card lg:card-side bg-base-100 shadow-xl" data-type="freelance">
+            <figure>
+              <img
+                src="img/corto_screen2.png"
+                alt="Screenshot of home page" />
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title">
+                Corto Safaris website
+              </h2>
+              <div>
+                <a href="https://www.cortosafaristanzania.com/" target="_blank" class="btn btn-xs btn-outline">
+                  View
+                  <svg width="16" height="16" fill="currentColor" class="ml-1">
+                    <path d="M5 3l5 5-5 5" stroke="currentColor" stroke-width="2" fill="none"/>
+                  </svg>
+                </a>
+              </div>
+              <p>A website for a tourism company based in Tanzania. A component-based CSS framework was used (Bootstrap) alongside JavaScript and HTML for content & styling, and Jquery for form submission.</p>
+              <div class="card-actions justify-normal py-2">
+                <div class="badge badge-outline badge-success">HTML/CSS</div>
+                <div class="badge badge-outline badge-success">Bootstrap</div>
+                <div class="badge badge-outline badge-warning">Web development</div>
+              </div>
             </div>
           </div>
-          <hr data-type="freelance">
 
-          <!--Uni projects-->
+          <!--Uni-->
           <!--1. Bank management system-->
-          <div class="container mx-auto px-4 pb-4 mb-6" data-type="university">
-            <h2 class="text-3xl font-extrabold text-info mb-4">Bank Management System</h2>
-            <p class="text-lg text-secondary-content mb-4">
-              A Bank Management system built in Python which utilizes command line inputs. You can retrieve your bank details, bank balance, create and manage your account among ther features. <br><br> A grade of <strong>63%</strong> was awarded for this project.
-            </p>
-            <p class="text-md font-semibold text-gray-400"><strong>Tech Stack:</strong></p>
-            <div class="badge badge-outline badge-info mb-6">Python</div>
-            <p class="text-md font-semibold text-gray-200 mb-4"><strong>Project tag:</strong> Software development</p>
-            <div class="space-x-4 mb-6">
-              <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-main">
-                Live Demo
-              </a>-->
-              <button><a href="https://github.com/anaisbl/TUD---OOP-final-CA" target="_blank" class="btn-main">
-                View Code
-              </a></button>
-            </div>
-            <div class="flex flex-wrap justify-center gap-4">
-              <img src="img/oop_ca_screen1.png" alt="Screenshot of main code" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
-              <img src="img/oop_ca_screen2.png" alt="Screenshot of terminal signing up" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
+          <div class="card lg:card-side bg-base-100 shadow-xl" data-type="university">
+            <figure>
+              <img
+                src="img/oop_ca_screen2.png"
+                alt="Screenshot of terminal signing up"/>
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title">
+                Bank Management System
+              </h2>
+              <div>
+                <a href="https://github.com/anaisbl/TUD---OOP-final-CA" target="_blank" class="btn btn-xs btn-outline">
+                  View
+                  <svg width="16" height="16" fill="currentColor" class="ml-1">
+                    <path d="M5 3l5 5-5 5" stroke="currentColor" stroke-width="2" fill="none"/>
+                  </svg>
+                </a>
+              </div>
+              <p>A Bank Management system built in Python which utilizes command line inputs. You can retrieve your bank details, bank balance, create and manage your account among ther features. <br><br> A grade of <strong>63%</strong> was awarded for this project.</p>
+              <div class="card-actions justify-normal py-2">
+                <div class="badge badge-outline badge-success">Python</div>
+                <div class="badge badge-outline badge-warning">Software development</div>
+              </div>
             </div>
           </div>
-          <hr data-type="university">
+
           <!--2. Classifier marketing campaign-->
-          <div class="container mx-auto px-4 py-4 mb-6" data-type="university">
-            <h2 class="text-3xl font-extrabold text-info mb-4">Predicting the outcome of a marketing campaign</h2>
-            <p class="text-lg text-secondary-content mb-4">
-              A classifier used to predict the outcome of a bank marketing campaing using csv data containing several types of data. I tested various classifiers from the sci-kit learn library and utlized certain encoding techniques to achieve the task. <br> <br> A grade of <strong>100%</strong> was awarded for this project.
-            </p>
-            <p class="text-md font-semibold text-gray-400"><strong>Tech Stack:</strong></p>
-            <div class="badge badge-outline badge-info">Python</div>
-            <div class="badge badge-outline badge-info">Sci-kit learn</div>
-            <div class="badge badge-outline badge-info mb-6">Jupyter Notebook</div>
-            <p class="text-md font-semibold text-gray-200 mb-4"><strong>Project tag:</strong> Machine learning</p>
-            <div class="space-x-4 mb-6">
-              <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-main">
-                Live Demo
-              </a>-->
-              <button><a href="https://github.com/anaisbl/TUD---ML-CA1" target="_blank" class="btn-main">
-                View Code
-              </a></button>
-            </div>
-            <div class="flex flex-wrap justify-center gap-4">
-              <img src="img/ml_ca_screen1.png" alt="Screenshot of main code" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
-              <img src="img/ml_ca_screen2.png" alt="Screenshot of predictions" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
+          <div class="card lg:card-side bg-base-100 shadow-xl" data-type="university">
+            <figure>
+              <img
+                src="img/ml_ca_screen1.png"
+                alt="Screenshot of main code"/>
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title">
+                Predicting the outcome of a marketing campaign
+              </h2>
+              <div>
+                <a href="https://github.com/anaisbl/TUD---ML-CA1" target="_blank" class="btn btn-xs btn-outline">
+                  View
+                  <svg width="16" height="16" fill="currentColor" class="ml-1">
+                    <path d="M5 3l5 5-5 5" stroke="currentColor" stroke-width="2" fill="none"/>
+                  </svg>
+                </a>
+              </div>  
+              <p>A classifier used to predict the outcome of a bank marketing campaing using csv data containing several types of data. I tested various classifiers from the sci-kit learn library and utlized certain encoding techniques to achieve the task. <br> <br> A grade of <strong>100%</strong> was awarded for this project.</p>
+              <div class="card-actions justify-normal py-2">
+                <div class="badge badge-outline badge-success">Python</div>
+                <div class="badge badge-outline badge-success">Sci-kit learn</div>
+                <div class="badge badge-outline badge-warning">Machine learning</div>
+              </div>
             </div>
           </div>
-          <hr data-type="university">
+
           <!--3. Big data-->
-          <div class="container mx-auto px-4 py-4 mb-6" data-type="university">
-            <h2 class="text-3xl font-extrabold text-info mb-4">Predicting steel-plates defects</h2>
-            <p class="text-lg text-secondary-content mb-4">
-                I joined a Kaggle playground series competition with the task of predicting steel-plate defects. Submissions were evaluated using area under the ROC curve for each of the defect categories and then averaged to give a final score. <br> <br>
-                I achieved a area under ROC score of 0.86375, which ranked me in the <strong>65th percentile</strong> (1443 out of 2199). The top score of the competition achieved a 0.89782 score.
-            </p>
-            <p class="text-md font-semibold text-gray-400"><strong>Tech Stack:</strong></p>
-            <div class="badge badge-outline badge-info">Python</div>
-            <div class="badge badge-outline badge-info">Sci-kit Learn</div>
-            <div class="badge badge-outline badge-info">Jupyter Notebook</div>
-            <div class="badge badge-outline badge-info mb-4">Pyspark</div>
-            <p class="text-md font-semibold text-gray-200 mb-4"><strong>Project tag:</strong> Big data</p>
-            <div class="space-x-4 my-6">
-              <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-main">
-                Live Demo
-              </a>-->
-              <button><a href="https://github.com/anaisbl/TUD---Bigdata-CA" target="_blank" class="btn-main">
-                View Code
-              </a></button>
-            </div>
-            <div class="flex flex-wrap justify-center gap-4">
-              <img src="img/bigdata_ca_screen1.png" alt="Screenshot of prediction code" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
-              <img src="img/bigdata_ca_screen2.png" alt="Screenshot of kaggle leaderboard" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
+          <div class="card lg:card-side bg-base-100 shadow-xl" data-type="university">
+            <figure>
+              <img
+                src="img/bigdata_ca_screen2.png"
+                alt="Screenshot of kaggle leaderboard"/>
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title">
+                Predicting steel-plates defects
+              </h2>
+              <div>
+                <a href="https://github.com/anaisbl/TUD---Bigdata-CA" target="_blank" class="btn btn-xs btn-outline">
+                  View
+                  <svg width="16" height="16" fill="currentColor" class="ml-1">
+                    <path d="M5 3l5 5-5 5" stroke="currentColor" stroke-width="2" fill="none"/>
+                  </svg>
+                </a>
+              </div>
+              <p>I joined a Kaggle playground series competition with the task of predicting steel-plate defects. Submissions were evaluated using area under the ROC curve for each of the defect categories and then averaged to give a final score. <br> <br>
+                I achieved a area under ROC score of 0.86375, which ranked me in the <strong>65th percentile</strong> (1443 out of 2199). The top score of the competition achieved a 0.89782 score.</p>
+              <div class="card-actions justify-normal py-2">
+                <div class="badge badge-outline badge-success">Python</div>
+                <div class="badge badge-outline badge-success">Sci-kit learn</div>
+                <div class="badge badge-outline badge-success">Pyspark</div>
+                <div class="badge badge-outline badge-warning">Big data</div>
+              </div>
             </div>
           </div>
-          <hr data-type="university">
+
           <!--4. Deep learning-->
-          <div class="container mx-auto px-4 py-4 mb-4" data-type="university">
-            <h2 class="text-3xl font-extrabold text-info mb-4">Prediction, Image processing & Transfer learning</h2>
-            <p class="text-lg text-secondary-content mb-4">
-                This assessment was separated into 2 parts: Song genre prediction and Image processing & transfer learning. <br>
+          <div class="card lg:card-side bg-base-100 shadow-xl" data-type="university">
+            <figure>
+              <img
+                src="img/deepl_ca_screen2.png"
+                alt="Screenshot of model output for image processing"/>
+            </figure>
+            <div class="card-body">
+              <h2 class="card-title">
+                Prediction, Image processing & Transfer learning
+              </h2>
+              <div>
+                <a href="https://github.com/anaisbl/TUD---DeepL-CA1" target="_blank" class="btn btn-xs btn-outline">
+                  View
+                  <svg width="16" height="16" fill="currentColor" class="ml-1">
+                    <path d="M5 3l5 5-5 5" stroke="currentColor" stroke-width="2" fill="none"/>
+                  </svg>
+                </a>
+              </div>
+              <p>This assessment was separated into 2 parts: Song genre prediction and Image processing & transfer learning. <br>
                 Part 1 focused on predicting the genre of a song using through deep neural network models and methods using a dataset from Kaggle. <br>
                 Part 2 utilized the CIFAR-100 dataset to perform a range of image processing and transfer learning operations. <br> <br>
-                A grade of <strong>71%</strong> was awarded for this project.
-
-            </p>
-            <p class="text-md font-semibold text-gray-400"><strong>Tech Stack:</strong></p>
-            <div class="badge badge-outline badge-info">Python</div>
-            <div class="badge badge-outline badge-info">Jupyter Notebook</div>
-            <div class="badge badge-outline badge-info mb-6">Tensorflow/Keras</div>
-
-            <p class="text-md font-semibold text-gray-200 mb-4"><strong>Project tag:</strong> Deep learning</p>
-            <div class="space-x-4 mb-6">
-              <!--<a href="https://your-live-project-link.com" target="_blank" class="btn-main">
-                Live Demo
-              </a>-->
-              <button><a href="https://github.com/anaisbl/TUD---DeepL-CA1" target="_blank" class="btn-main">
-                View Code
-              </a></button>
-            </div>
-            <div class="flex flex-wrap justify-center gap-4">
-              <img src="img/deepl_ca_screen1.png" alt="Screenshot of preprocessing code part 1" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
-              <img src="img/deepl_ca_screen2.png" alt="Screenshot of model output for image processing" class="rounded-lg shadow-lg w-full sm:w-1/2 lg:w-1/3">
+                A grade of <strong>71%</strong> was awarded for this project.</p>
+              <div class="card-actions justify-normal py-2">
+                <div class="badge badge-outline badge-success">Python</div>
+                <div class="badge badge-outline badge-success">Tensorflow/Keras</div>
+                <div class="badge badge-outline badge-warning">Deep learning</div>
+              </div>
             </div>
           </div>
-          <hr data-type="university">
 
-          <!--Just for fun project
-          <div class="container mx-auto px-4 py-4 mb-4" data-type="fun">
-            <h2 class="text-3xl font-extrabold text-info mb-4">I'm working on it!</h2>
-          </div>
-          <hr data-type="fun">-->
+          <!--Just for fun project-->
+
         </section>
 
     </div>
